styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Amethysta&family=Lato&display=swap');


:root {
    --main-color: #355872;
    --secondary-color: #7AAACE;
    --tertiary-color: #9CD5FF;
    --hovering-color: #F7F8F0;

    --primary-font: 'Lato', sans-serif;
    --secondary-font: 'Amethysta', sans-serif;
}

* {
    margin: 0;
    padding: 0;
}

body {
    box-sizing: border-box;
    background-color: var(--main-color);
    color: var(--secondary-color);
}

.header {
    padding: 2% 0% 0% 15%;
}

.header__menu {
    display: flex;
    gap: 80px;
}

.header__menu__option {
    font-family: var(--secondary-font);
    font-size: 1.5rem;
    font-weight: 400;
    color: var(--tertiary-color);
    text-decoration: none;
}

.main__presentation {
    padding: 4% 15%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.main__presentation__section {
    width: 50%;
    display: flex;
    flex-direction: column;
    gap: 40px;
}

.main__presentation__title {
    font-size: 2.25rem;
    font-family: var(--primary-font);
}

.main__presentation__text {
    font-size: 1.5rem;
    font-family: var(--secondary-font);
}

.main__presentation__links {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    gap: 32px;
}

.main__presentation__links__subtitles {
    font-family: var(--primary-font);
    font-size: 1.5rem;
}

.main__presentation__links__proper {
    display: flex;
    justify-content: center;
    gap: 16px;
    border: 2px solid var(--tertiary-color);
    width: 50%;
    text-align: center;
    border-radius: 8px;
    font-size: 1.5rem;
    font-weight: 600;
    padding: 21.5px 0;
    text-decoration: none;
    color: var(--secondary-color);
    font-family: var(--secondary-font);
}

.main__presentation__links__proper:hover {
    background-color: var(--cor-hover);
}

.presentation__image {
    width: 50%;
    width: 30rem;
    height: 40rem;
}

.footer{
    color: var(--primary-color);
    background-color: var(--tertiary-color);
    padding: 24px;
    text-align: center;
    font-family: var(--secondary-font);
    font-size: 1.5rem;
    font-weight: 400;
}

